# wildmeshing-toolkit

./: CMakeLists.txt
.github/workflows/: continuous.yml
app/: CMakeLists.txt
app/adamesh/: CMakeLists.txt
app/adamesh/src/: AdaMesh.cpp  AdaMesh.hpp  AdaMesh_insert.cpp  AdaMesh_util.cpp
app/adamesh/tests/: CMakeLists.txt  test_adamesh.cpp
app/tests/: file_write.cpp  test_insertion.cpp  test_operation_smooth.cpp  test_operations.cpp  test_runner.cpp
app/tetwild/: CMakeLists.txt  TetWild.cpp  main.cpp
app/tetwild/app/: main.cpp
app/tetwild/src/tetwild/: EdgeCollapsing.cpp  EdgeSplitting.cpp  EdgeSwapping.cpp  TetWild.cpp  TetWild.h  TetWildSmooth.cpp  TriangleInsertion.cpp  common.h
app/triwild/: CMakeLists.txt  main.cpp
cmake/recipes/: bichon.cmake  geogram.cmake  libigl.cmake
src/wmtk/: EdgeCollapsingConn.cpp  ExecutionScheduler.hpp  SwapMeshConnectivity.cpp  TetMesh.cpp  TetMesh.h  TetMeshOperations.hpp  TetMeshTriangleInsertionConn.cpp  TetMeshTuple.cpp  TriMesh.cpp  Tuple.cpp
src/wmtk/utils/: EnergyHarmonicTet.cpp  InsertTriangleUtils.hpp  VectorUtils.h
